nenolod     2006/10/20 18:55:23 UTC	(20061020-6729)
  Log:
  - rename parse1() to text_to_parv().
  

  Changes:	Modified:
  +3 -3		trunk/src/commandtree.c (File Modified) 


jilles      2006/10/20 18:48:53 UTC	(20061020-6727)
  Log:
  Remove fcommand completely.
  

  Changes:	Modified:
  +0 -12	trunk/include/commandtree.h (File Modified) 
  +0 -5		trunk/modules/chanserv/akick.c (File Modified) 
  +0 -174	trunk/modules/chanserv/ban.c (File Modified) 
  +0 -130	trunk/modules/chanserv/flags.c (File Modified) 
  +0 -152	trunk/modules/chanserv/halfop.c (File Modified) 
  +1 -48	trunk/modules/chanserv/help.c (File Modified) 
  +0 -127	trunk/modules/chanserv/kick.c (File Modified) 
  +0 -1		trunk/modules/chanserv/main.c (File Modified) 
  +0 -135	trunk/modules/chanserv/op.c (File Modified) 
  +0 -117	trunk/modules/chanserv/topic.c (File Modified) 
  +0 -15	trunk/modules/chanserv/version.c (File Modified) 
  +0 -116	trunk/modules/chanserv/voice.c (File Modified) 
  +0 -93	trunk/src/commandtree.c (File Modified) 


nenolod     2006/10/20 18:42:05 UTC	(20061020-6725)
  Log:
  - declare those now-public declarations
  

  Changes:	Modified:
  +4 -0		trunk/include/account.h (File Modified) 


nenolod     2006/10/20 18:40:59 UTC	(20061020-6723)
  Log:
  - make some declarations public
  

  Changes:	Modified:
  +6 -6		trunk/src/node.c (File Modified) 


nenolod     2006/10/20 18:39:39 UTC	(20061020-6721)
  Log:
  - move blockheap for accounts to accounts.c
  

  Changes:	Modified:
  +9 -0		trunk/src/account.c (File Modified) 
  +1 -2		trunk/src/node.c (File Modified) 


nenolod     2006/10/20 18:35:41 UTC	(20061020-6719)
  Log:
  - missed a spot
  

  Changes:	Modified:
  +1 -1		trunk/src/services.c (File Modified) 


nenolod     2006/10/20 18:32:36 UTC	(20061020-6717)
  Log:
  - remove unused struct myaccessmask_
  

  Changes:	Modified:
  +0 -7		trunk/include/account.h (File Modified) 


nenolod     2006/10/20 18:31:20 UTC	(20061020-6715)
  Log: